--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-cosmos": "^5.0.0-alpha.7",
-    "react-cosmos-loader": "^4.8.2",
+    "react-cosmos-fixture": "^4.8.1",
     "react-native-testing-library": "^1.7.0",
     "react-test-renderer": "16.8.3"
   },
